# python_crawler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crawler/: __main__.py  cli.py
src/crawler/crawler/: __init__.py  _context.py  _crawler.py  _dispatcher.py  _factory.py  _logger.py  _pool.py  _storage.py  _types.py
src/crawler/fetcher/: __init__.py  _base.py  _retry.py  _simple.py  _types.py
src/crawler/frontier/: __init__.py
src/crawler/parser/: __init__.py
src/crawler/robotstxt/: __init__.py  _parser.py  _rules.py
src/crawler/url/: __init__.py
tests/: test_cli.py  test_crawler.py  test_fetcher.py  test_frontier.py  test_logger.py  test_parser.py  test_retry.py  test_robotstxt.py  test_url.py
