[project]
name = "crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
]

[project.scripts]
crawler = "crawler.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.15.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
